--- a/assets/admin.html
+++ b/assets/admin.html
@@ -15,9 +15,8 @@
           <a class="nav-item selectable--text" style="font-weight: 700;" id="fm" @click="fileMenu" ref="btnFile">File</a>
           <img src="img/nav_separator.svg" class="nav-item cursor-default">
           <a class="nav-item">Administration Mode</a>
-          <h2 class="yellow--text nav-item--push cursor-default"><strong></strong>Alcolator</strong></h2>
+          <img src="img/logo-small.png" class="nav-item--push cursor-default">
           <img src="img/nav_separator.svg" class="nav-item cursor-default" style="opacity: 0.2">
-          <i class="material-icons nav-icon nav-item selectable--text" style="margin-bottom: 6px;">minimize</i>
           <i class="material-icons nav-icon nav-item selectable--text" style="margin-right: 9px;" @click="areYouSureOpen(winClose)">close</i>
       </div>
       <div class="flexbox-row" id="vm">
@@ -208,7 +207,7 @@
                 </div>
                 <div class="flexbox-row--alignright" style="justify-content: flex-end; margin-top: 30px;">
                   <template v-if="isNewUserOpen">
-                    <button class="normal red white--text selectable" style="margin-right: 25px; width: 172px;" id="cancel" @click="areYouSureOpen(cancelNewUser)">Cancel</button>
+                    <button class="normal orange white--text selectable" style="margin-right: 25px; width: 172px;" id="cancel" @click="areYouSureOpen(cancelNewUser)">Cancel</button>
                   </template>
                 </div>
               </div> 
@@ -249,7 +248,7 @@
             <h6 style="margin-top: 22px; margin-bottom: 27px; padding: 0;">You might lose some changes.</h6>
             <div class="flexbox-row--align" style="margin-top: 15px; margin-left: 20px; width: 100%;">
               <button class="dark-grey white--text selectable" style="margin-right: 5px;" @click="areYouSureYes">Proceed</button>
-              <button class="red white--text selectable" style="margin-left: 5px; margin-right: 50px;" @click="areYouSureNo">Cancel</button>
+              <button class="orange white--text selectable" style="margin-left: 5px; margin-right: 50px;" @click="areYouSureNo">Cancel</button>
             </div>
           </div>
         </div>
@@ -265,7 +264,7 @@
               <template v-else>
                 <button class="dark-grey white--text disabled" style="margin-right: 5px;">Proceed</button>
               </template>
-              <button class="red white--text selectable" style="margin-left: 5px; margin-right: 50px;" @click="newExperimentClose">Cancel</button>
+              <button class="orange white--text selectable" style="margin-left: 5px; margin-right: 50px;" @click="newExperimentClose">Cancel</button>
             </div>
           </div>
         </div>
